Properly update the payment request credit card billing combob box when a new address is added.

BUG=723634

Review-Url: https://codereview.chromium.org/2888203004
Cr-Commit-Position: refs/heads/master@{#472792}

Former-commit-id: efe21de9c7770038f4901f7d8fd75570a72e1747